zotprime-k8s/microk8s/manifests/zotprime-redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zotprime-redis
  namespace: zotprime
  labels:
    apps: zotprime-redis
spec:
  serviceName: "redis-service"
  replicas: 1
  selector:
    matchLabels:
      apps: zotprime-redis
  template:
    metadata:
      labels:
        apps: zotprime-redis
#        appCluster: redis-cluster
    spec:
      terminationGracePeriodSeconds: 20
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - redis
              topologyKey: kubernetes.io/hostname
      containers:
      - name: redis
        image: uniuu/zotprime-redis:2.6.1-rc
        command:
          - "redis-server"
        args:
          - "/conf/redis.conf"
          - "--protected-mode"
          - "no"
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
#            cpu: "100m"
            memory: "100Mi"
        ports:
            - name: redis
              containerPort: 6379
              protocol: "TCP"
            - name: cluster
              containerPort: 16379
              protocol: "TCP"
        startupProbe:
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 20
          tcpSocket:
            port: redis
        livenessProbe:
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
          exec:
            command: ["sh", "-c", "/probes/liveness.sh"]
        readinessProbe:
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 5
          exec:
            command: ["sh", "-c", "/probes/readiness.sh"]
        volumeMounts:
        - name: conf
          mountPath: /conf
          readOnly: false
        - name: dataredis
          mountPath: /data
          readOnly: false
        - name: probes
          mountPath: /probes
          readOnly: true
      priorityClassName: high-priority
      volumes:
      - name: conf
        configMap:
          name: redis-config
          defaultMode: 0755
      - name: probes
        configMap:
          name: redis-probes
          defaultMode: 0555
  volumeClaimTemplates:
  - metadata:
      name: dataredis
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
