zotprime-k8s/microk8s/manifests/zotprime-tinymceclean-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    apps: zotprime-tinymceclean
  name: zotprime-tinymceclean
  namespace: zotprime
spec:
  replicas: 1
  selector:
    matchLabels:
      apps: zotprime-tinymceclean
  strategy: {}
  template:
    metadata:
      labels:
        apps: zotprime-tinymceclean
      name: zotprime-tinymceclean
    spec:
      containers:
        - image: uniuu/zotprime-tinymceclean:2.6.1-rc
          imagePullPolicy: Always
          name: zotprime-tinymceclean
          ports:
            - containerPort: 16342
          resources:
            limits:
              memory: 256Mi
#              cpu: "0.1"
            requests:
              memory: 256Mi
              cpu: "0.1"
      priorityClassName: medium-priority
      restartPolicy: Always
      securityContext: {}
status: {}
