zotprime-k8s/microk8s/manifests/zotprime-dataserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apps: dataserver
  name: dataserver
  namespace: zotprime
spec:
  ports:
    - name: dataserver-api
      port: 80
      targetPort: 80
#    - name: s3
#      port: 8082
#      targetPort: 8082
  selector:
    apps: zotprime-dataserver
  type: ClusterIP
status:
  loadBalancer: {}
