zotprime-k8s/microk8s/manifests/zotprime-minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apps: minio
  name: minio
  namespace: zotprime
spec:
  clusterIP: 10.152.183.11
  ports:
    - name: minio-ui
      port: 9001
      targetPort: 9001
    - name: minio-data
      port: 9000
      targetPort: 9000
    - name: minio-data2
      port: 80
      targetPort: 9000
  selector:
    apps: zotprime-minio
  type: ClusterIP
status:
  loadBalancer: {}
