zotprime-k8s/microk8s/manifests/zotprime-phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apps: phpmyadmin
  name: phpmyadmin
  namespace: zotprime
spec:
  ports:
    - name: phpmyadmin
      port: 80
      targetPort: 80
  selector:
    apps: zotprime-phpmyadmin
  type: ClusterIP
