zotprime-k8s/microk8s/manifests/zotprime-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    apps: zotprime-ingress-http
  name: zotprime-ingress-http
  namespace: zotprime
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: min.zotprime
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: minio-ui
    - host: s3min.zotprime
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: minio-data
    - host: pm.zotprime
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin
                port:
#                  name: phpmyadmin
                  number: 80
    - host: api.zotprime
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dataserver
                port:
                  name: dataserver-api
#                  number: 8080
#status:
#  loadBalancer: {}
